--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,4 +23,22 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+
+  /* justify-content: center;
+  align-items: center; */
+  /* min-height: 100vh; */
 }
+/* @keyframes wave {
+  0%,
+  100% {
+    height: 0.5rem;
+  }
+  50% {
+    height: 1.25rem;
+  }
+}
+
+.wave-bar {
+  animation: wave 1s infinite ease-in-out;
+  animation-delay: calc(var(--index) * 0.2s);
+} */
